--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <title>Hockey Stats</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<div class=page>
-  <h1>Hockey Stats</h1>
-  <div class=metanav>
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/custom.css') }}">
+<div class="container">
+   <div class="hero-unit">
+      <form class="form-search">
+         <input type="text" class="input-xxlarge search-query" value="{{ user_input }}" />
+      </form>
+      {% for message in get_flashed_messages() %}
+       <div class=flash>{{ message }}</div>
+      {% endfor %}
+      {% block body %}{% endblock %}
+   </div>
 </div>
