--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,25 @@
 body {
+   margin-top: 30px;
    background-color: #333;
 }
 
 form {
    text-align: center;
+   margin-top: 30px;
+}
+
+h1 {
+   margin: 0;
+}
+
+.answer {
+   margin-top: 10px; 
+}
+
+.boxscore {
+   -webkit-border-radius: 10px;
+   background-color: #333;
+   color: white;
+   float: left;
+   padding: 10px;
 }
