--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<title>Hockey Stats</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/custom.css') }}">
+<head>
+   <title>Hockey Stats</title>
+   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/custom.css') }}">
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+   {% block head %}{% endblock %}
+</head>
 <div class="container">
    <div class="hero-unit">
-      <form class="form-search">
-         <input type="text" class="input-xxlarge search-query" value="{{ user_input }}" />
-      </form>
       {% for message in get_flashed_messages() %}
        <div class=flash>{{ message }}</div>
       {% endfor %}
